--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "ethers": "^5.7.2",
+    "porto": "^0.0.60",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.7.0",
     "typescript": "^5.4.2",
-    "vite": "^5.2.0",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17"
+    "vite": "^5.2.0"
   }
 }
